fix: MA-24-movie title not fit in container in large screen

--- a/src/utils/movie_content.scss
+++ b/src/utils/movie_content.scss
@@ -191,7 +191,7 @@ $laptop-screen: 1200px;
       height: 100%;
       top:15px;
       text-align: center;
-      font-size: 2rem;
+      font-size: 1.7rem;
     }
     &_tagList {
       justify-content: center;
